--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,15 @@
     <title>MarkLogic Google Maps</title>
 
     <!-- vendor.min.css is generated using gulp -->
-    <link rel="stylesheet" href="styles/vendor.min.css">
+    <!-- build:css styles/vendor.min.css -->
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css">
+    <!-- endbuild -->
     
     <!-- main.min.css is generated using gulp -->
-    <link rel="stylesheet" href="styles/main.min.css">
+    <!-- build:css styles/main.min.css -->
+    <link rel="stylesheet/less" type="text/less" href="styles/main.less">
+    <!-- endbuild -->
 
     <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet">
     <link rel="help" href="/api">
@@ -82,9 +87,20 @@
 <ng-include src="'views/footer.html'"></ng-include>
 
     <!-- vendor.min.js is generated using gulp -->
-    <script src="scripts/vendor.min.js"></script>
+    <!-- build:js scripts/vendor.min.js -->
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="../bower_components/angular-route/angular-route.js"></script>
+    <!-- endbuild -->
 
     <!-- main.min.js is generated using gulp -->
-    <script src="scripts/main.min.js"></script>
+    <!-- build:js scripts/main.min.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/test.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
