Fixed nobase error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js"> <!--<![endif]-->
 <head>
-
+    <base href="/ml-google-maps-ng/">
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="description" content="AngularJS directives with Google Maps integration for use with MarkLogic REST-api.">
@@ -79,7 +80,7 @@
     <img style="position: fixed; top: 0; right: 0; border: 0; z-index: 10000" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
 </a>
 
-<ng-include src="'views/footer.html'"></ng-include>
+<!--ng-include src="'views/footer.html'"></ng-include-->
 
     <!-- vendor.min.js is generated using gulp -->
     <script src="scripts/vendor.min.js"></script>
