Added compile of html

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
 </head>
-<body ng-app="mlGoogleMapsApp">
+<body ng-app="mlGoogleMapsDemoApp">
 <!--[if lte IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
@@ -100,7 +100,6 @@
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-
     <!-- endbuild -->
 
     <!-- main.min.js is generated using gulp -->
@@ -108,5 +107,8 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/home-ctrl.js"></script>
     <!-- endbuild -->
+    <!-- main-tpls.min.js is generated using gulp -->
+    <script src="scripts/main-tpls.min.js"></script>
+    
 </body>
 </html>
