--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
 </head>
-<body ng-app="mlGoogleMapsApp">
+<body ng-app="mlGoogleMapsDemoApp">
 <!--[if lte IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
@@ -87,5 +87,8 @@
 
     <!-- main.min.js is generated using gulp -->
     <script src="scripts/main.min.js"></script>
+    <!-- main-tpls.min.js is generated using gulp -->
+    <script src="scripts/main-tpls.min.js"></script>
+    
 </body>
 </html>
