Resolved angular name conflicts

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
 </head>
-<body ng-app="mlGoogleMapsDemoApp">
+<body ng-app="mlGoogleMapsDemo">
 <!--[if lte IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
