Fixed CSS to show gmap

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     
     <!-- main.min.css is generated using gulp -->
     <!-- build:css styles/main.min.css -->
-    <link rel="stylesheet/less" type="text/less" href="styles/main.less">
+    <link rel="stylesheet/less" type="text/less" href="styles/home.less">
     <!-- endbuild -->
 
     <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet">
