--- a/src/home.html
+++ b/src/home.html
@@ -1,3 +1,3 @@
-<div class="row">
+<div class="home row">
   <ui-gmap-google-map center="model.map.center" zoom="model.map.zoom"></ui-gmap-google-map>
 </div>
