--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li ui-sref-active="active"><a ui-sref="home" rel="start">Home</a></li>
-                <!--li ui-sref-active="active"><a ui-sref="use" rel="use">Quickstart</a></li>
-                <li ui-sref-active="active"><a ui-sref="api" rel="api">API documentation</a></li>
+                <li ui-sref-active="active"><a ui-sref="quickstart" rel="quickstart">Quickstart</a></li>
+                <!--li ui-sref-active="active"><a ui-sref="api" rel="api">API documentation</a></li>
                 <li ui-sref-active="active"><a ui-sref="faq" rel="faq">FAQ</a></li>
                 <li ui-sref-active="active"><a ui-sref="changelog" rel="changelog">Changelog</a></li>
                 <li ui-sref-active="active"><a ui-sref="demo" rel="demo">Demo</a></li-->
