--- a/src/quickstart.html
+++ b/src/quickstart.html
@@ -3,23 +3,23 @@
 <div class="row">
     <div class="col-md-12">
         <p>
-            To start using Google Maps for AngularJS, follow these simple steps to get started.
+            To start using Google Maps for MarkLogic, follow these simple steps to get started.
             Once you're up and running, visit the <a ui-sref="api">API documentation</a> to learn how to get the most out of it.
         </p>
 
         <ol class="steps">
             <li>
                 <p>
-                    Download <a href="https://raw.github.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.js">angular-google-maps.js</a>
-                    (<a href="https://raw.github.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.min.js">minified version</a>) and put it with your other scripts.
+                    Download <a href="https://raw.github.com/grtjn/ml-google-maps-ng/master/dist/ml-google-maps-ng.js">ml-google-maps-ng.js</a>
+                    (<a href="https://raw.github.com/grtjn/ml-google-maps-ng/master/dist/ml-google-maps-ng.min.js">minified version</a>) and put it with your other scripts.
                     Alternatively, you can use Bower to install it automatically:
                 </p>
-                <div hljs language="bash">bower install angular-google-maps</div>
-                <p>If not using Bower, you'll also need to fetch <a href="http://lodash.com/" rel="external">lodash.js</a> yourself.</p>
+                <div hljs language="bash">bower install [-save] ml-google-maps-ng</div>
+                <p>If not using Bower, you'll also need to fetch <a href="http://lodash.com/" rel="external">lodash.js</a>, and <a href="http://github.com/angular-ui/angular-google-maps" rel="external">angular-google-maps.js</a> yourself.</p>
             </li>
             <li>
-                <p>Load lodash.js and angular-google.maps.js into your HTML page:</p>
-                <div hljs language="html" source="'<script src=\'/path/to/lodash[.min].js\'></script>\n<script src=\'/path/to/angular-google-maps[.min].js\'></script>'">
+                <p>Load lodash.js, angular-google-maps.js, and ml-google-maps-ng.js into your HTML page:</p>
+                <div hljs language="html" source="'<script src=\'/path/to/lodash[.min].js\'></script>\n<script src=\'/path/to/angular-google-maps[.min].js\'></script>\n<script src=\'/path/to/ml-google-maps-ng[.min].js\'></script>'">
                 </div>
             </li>
             <li>
@@ -54,7 +54,7 @@
                     Google also submits to this regulation. They serve this modified system at maps.google.cn. <br>
                     Specify a <code>china</code> flag when you load the Google Maps API using the GoogleMapsApi Loader like so:<br>
                 <div hljs language="js">
-angular.module('myApplicationModule', ['uiGmapgoogle-maps']).config(
+angular.module('myApplicationModule', ['ml-google-maps-ng']).config(
     ['uiGmapGoogleMapApiProvider', function(GoogleMapApiProviders) {
         GoogleMapApiProvider.configure({
             china: true
@@ -68,8 +68,8 @@ angular.module('myApplicationModule', ['uiGmapgoogle-maps']).config(
             </li>
 
             <li>
-                <p>Make your application module depend on the <code>uiGmapgoogle-maps</code> module:</p>
-                <div hljs language="js">angular.module('myApplicationModule', ['uiGmapgoogle-maps']);</div>
+                <p>Make your application module depend on the <code>ml-google-maps-ng</code> module:</p>
+                <div hljs language="js">angular.module('myApplicationModule', ['ml-google-maps-ng']);</div>
             </li>
             <li>
                 <p>Add a <code>map</code> object to your scope like so:</p>
