--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,9 @@
 <h1 class="page-header" itemprop="name">Google Maps for MarkLogic</h1>
 
 <div class="home row">
-  <ui-gmap-google-map center="model.map.center" zoom="model.map.zoom"></ui-gmap-google-map>
+  <search-map map="model.searchMap.map" options="model.searchMap.options"
+              facets="model.search.facets" markers="model.searchMap.markers" bounds-changed="boundsChanged(bounds)"
+              show-result="showResult(uri)" show-context-menu="resetMap()" selections="model.searchMap.selections">
+  </search-map>
+  <map-legend facets="model.search.facets"></map-legend>
 </div>
