Added debug info

--- a/src/home.html
+++ b/src/home.html
@@ -6,5 +6,5 @@
               show-result="showResult(uri)" show-context-menu="resetMap()" selections="model.searchMap.selections">
   </ml-search-map>
   <ml-search-map-legend facets="model.search.facets"></ml-search-map-legend>
-  <div style="display:none">{{model}}</div>
+  <div style="display:none">{{model.search}}</div>
 </div>
