--- a/src/ml-google-search-map-legend.html
+++ b/src/ml-google-search-map-legend.html
@@ -1,6 +1,6 @@
 <div class="map-legend">
   <span ng-repeat="(index, facet) in facets | hasBoxes">
     <span ng-class="{0: 'map-cluster-icon icon1', 1: 'map-cluster-icon icon2', 2: 'map-cluster-icon icon3', 3: 'map-cluster-icon icon4', 4: 'map-cluster-icon icon5' }[index]"></span>
-    <label>{{facet.label ? facet.label : facet.__key}}</label>
+    <label>{{facet.label ? facet.label : facet.name}}</label>
   </span>
 </div>
