--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet">
     <link rel="help" href="/api">
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.&libraries=drawing&sensor=false"></script>
+    <script src="//maps.googleapis.com/maps/api/js?v=3.&libraries=drawing&sensor=false"></script>
 
   </head>
   <body ng-app="mlGoogleMapsDemo">
