--- a/src/home.html
+++ b/src/home.html
@@ -1,6 +1,10 @@
 <h1 class="page-header" itemprop="name">Google Maps for MarkLogic</h1>
 
 <div class="home row">
+  <div class="alert alert-info" role="alert">
+    <strong>Note:</strong>
+    These examples are running with static data. Zooming in could respond with recalculation of heatmap to get finer detail.
+  </div>
   <ml-google-search-map map="model.searchMap.map" options="model.searchMap.options"
               facets="model.search.facets" markers="model.searchMap.markers" bounds-changed="boundsChanged(bounds)"
               show-result="showResult(uri)" show-context-menu="resetMap()" selections="model.searchMap.selections">
