Fixed another quickstart typo

--- a/src/quickstart.html
+++ b/src/quickstart.html
@@ -136,7 +136,7 @@ var initMapOptions = {
   mapTypeId: $window.google.maps.MapTypeId.ROADMAP
 };
 
-$scope.myMap: {
+$scope.myMap = {
   map: null,
   options: angular.extend({}, initMapOptions),
   markers: [],
